k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stem-wiki
  labels:
    app: stem-wiki
    purpose: internal-tools
