k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stem-wiki
  labels:
    app: stem-wiki
    component: web
  annotations:
    # Container-native load balancing: the GKE Gateway controller routes
    # straight to pod IPs via this standalone NEG instead of through kube-proxy.
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: stem-wiki
    component: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
